[project]
name = "GRAPE"
version = "1.0.0"
description = "Packed version of GRAPE code developed by the BDS group"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vitorfrois/grape"